--- a/index.html
+++ b/index.html
@@ -3,21 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <title>moving-car</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
 </head>
-<body>
+<body aria-hidden="true">
     <div class="container">
         <div class="sky">
             <div class="tree"></div>
             <div class="track"></div>
             <div class="car">
-                <div class="wheel wheel1"><img src="car_wheel_left.png" alt=""></div>
-                <div class="wheel wheel2"><img src="car_wheel_right.png" alt=""></div>
+                <div class="wheel wheel1"><img src="car_wheel_left.png" alt="left_wheel"></div>
+                <div class="wheel wheel2"><img src="car_wheel_right.png" alt="right_wheel"></div>
             </div>
-            <!-- <div class="audio"><embed src="sound.mp3" autostart="'true" loop="true" controls></a></div> -->
+           
             <div class="audio1"><audio src="sound.mp3" controls autoplay loop></audio></div>
         </div>
     </div>
