--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <div class="tree"></div>
             <div class="track"></div>
             <div class="car">
-                <div class="wheel wheel1"><img src="car_wheel_left.png" alt="left_wheel"></div>
-                <div class="wheel wheel2"><img src="car_wheel_right.png" alt="right_wheel"></div>
+                <div class="wheel wheel1"><img src="car_wheel_left.webp" alt="left_wheel"></div>
+                <div class="wheel wheel2"><img src="car_wheel_right.webp" alt="right_wheel"></div>
             </div>
            
             <div class="audio1"><audio src="sound.mp3" controls autoplay loop></audio></div>
