--- a/index.html
+++ b/index.html
@@ -2,13 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Vishal Animated_moving-car">
+    <meta name="keywords" content="HTML, CSS, JavaScript">
+    <meta name="author" content="Vishal Indradev Chauhan">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0">
     <title>moving-car</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
 </head>
-<body aria-hidden="true">
+<body >
     <div class="container">
         <div class="sky">
             <div class="tree"></div>
